# oc-formation

./: .gitignore  readme.md
nuthatch_project/: cli.py  license  pyproject.toml  readme.md
nuthatch_project/nuthatch/: __init__.py
nuthatch_project/nuthatch/etl/: exploration.py
nuthatch_project/nuthatch/ml/: evaluating.py  modeling.py  preprocessing.py
p9/: main.py  readme.md  requirement.txt
p9/conf/: file.json
p9/notebook/: alpha.ipynb  nbstyler.css
p9/pkl/: dataset.pkl
p9/src/process/: stage_pca.py  stage_plot.py  stage_prepare.py
p9/style/: mplstyler.mplstyle
